--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container1">
-      <img src="images/image-qr-code.png" alt="qr-code-image" />
+      <img src="image-qr-code.png" alt="qr-code-image" />
       <div class="text">
         <h2>QR CODE</h2>
         <p>Scan this code with your phone.</p>
